<resources>
    <string name="app_name">COMPASS 17</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_signUp">Sign Up</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_forgetPassword">Forget Your Password?</string>
    <string name="btn_go_signup">Not a member? Sign Up now!</string>
    <string name="btn_email_hint">Email</string>
    <string name="btn_password_hint">Password</string>
    <string name="btn_confirmPassword_hint">Confirm Password</string>
    <string name="btn_guest">Sign in as a guest</string>
    <string name="backToLogin">Back To Login</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="forgot_password_msg">We will send password reset instructions to your registered Email.</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string-array name="list_items">
        <item>Web__Sunday 17/11 3.30pm</item>
        <item>Android__Sunday 17/11 3.30pm</item>
        <item>Web__Sunday 17/11 3.30pm</item>
        <item>Android__Sunday 17/11 3.30pm</item>
        <item>Web__Sunday 17/11 3.30pm</item>
        <item>Android__Sunday 17/11 3.30pm</item>
    </string-array>
</resources>
