<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.amr.compass_17.ForgotPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:textSize="30dp"
        android:text="@string/forgot_password_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="125dp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password_msg"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btn_email_hint"
        android:layout_centerVertical="true"
        android:inputType="textEmailAddress"
        android:id="@+id/Email_Reset_EditText"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainThemeColor2"
        android:textColor="@color/white"
        android:text="@string/btn_reset"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/Email_Reset_EditText"
        android:id="@+id/reset_btn"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_centerVertical="true"
        />

</RelativeLayout>
