<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.amr.compass_17.SignUpActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_centerVertical="true"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btn_email_hint"
        android:inputType="textEmailAddress"
        android:id="@+id/Email_SignUp_EditText"
        />

    <EditText
        android:layout_below="@+id/Email_SignUp_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btn_password_hint"
        android:inputType="textPassword"
        android:id="@+id/Password_SingUp_EditText"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:layout_below="@+id/Password_SingUp_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btn_confirmPassword_hint"
        android:inputType="textPassword"
        android:id="@+id/confirmPassword_SingUp_EditText"
        android:layout_marginTop="10dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainThemeColor2"
        android:textColor="@color/white"
        android:text="@string/btn_signUp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/confirmPassword_SingUp_EditText"
        android:id="@+id/SignUP_btn"
        />
</RelativeLayout>
